--- a/SeleniumGoogleCalc/SeleniumGoogleCalc/SeleniumGoogleCalc.csproj
+++ b/SeleniumGoogleCalc/SeleniumGoogleCalc/SeleniumGoogleCalc.csproj
@@ -15,13 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Selenium.Support" Version="3.141.0" />
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SeleniumToolkit\SeleniumToolkit.csproj" />
   </ItemGroup>
 
 </Project>
